--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
-  "name": "chin-plugin-outpath",
+  "name": "chin-plugin-rename",
   "version": "0.0.1",
-  "repository": "chinjs/chin-plugin-outpath",
+  "repository": "chinjs/chin-plugin-rename",
   "author": "kthjm <toxictoxer@gmail.com>",
   "license": "MIT",
-  "description": "",
+  "description": "Chin plugin for rename",
+  "main": ".dist/index.js",
   "files": [
     ".dist/"
   ],
-  "main": ".dist/index.js",
   "keywords": [
     "chin",
     "chin-plugin",
+    "rename",
+    "path",
     "filename"
   ],
   "nyc": {
@@ -21,12 +23,18 @@
     "sourceMap": false,
     "instrument": false
   },
+  "prettier": {
+    "tabWidth": 2,
+    "semi": false,
+    "singleQuote": true
+  },
   "scripts": {
     "type": "flow",
     "test": "cross-env BABEL_ENV=test nyc mocha",
     "coverage": "nyc report --reporter=lcov && codecov",
+    "prebuild": "cpy index.js.flow .dist",
     "build": "cross-env BABEL_ENV=build babel index.js -d .dist",
-    "postbuild": "cpy index.js.flow .dist"
+    "postbuild": "prettier .dist/** --write"
   },
   "peerDependencies": {
     "chin": "^3.1.6"
@@ -39,12 +47,15 @@
     "@babel/register": "^7.0.0",
     "babel-plugin-istanbul": "^5.1.0",
     "babel-preset-power-assert": "^3.0.0",
+    "chin": "^3.1.6",
     "codecov": "^3.1.0",
     "cpy-cli": "^2.0.0",
     "cross-env": "^5.2.0",
     "flow-bin": "^0.89.0",
     "mocha": "^5.2.0",
+    "npm-run-all": "^4.1.5",
     "nyc": "^13.1.0",
-    "power-assert": "^1.6.1"
+    "power-assert": "^1.6.1",
+    "prettier": "^1.15.3"
   }
 }
